--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,14 +1,88 @@
 <html>
     <head>
         <title>
-
+            To Do App
         </title>
-
-
+        <link href="/css/home.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
         <body>
-            <h1>ToDo / <%=title%></h1>
+            <div id="todo-container">
+
+               
+                <div id="page-heading">
+                    TODO App
+                </div>
+                <form action="/todo/add"method="POST">
+                        <div id="description">
+                            <div class="sec-heading">
+                                DESCRIPTION
+                            </div>
+                            <div class="input">
+                                <textarea id="textarea" name="todo" placeholder="What do you need to do?" required></textarea>
+                            </div>
+                        </div>
+                        <div id="category-date">
+                            <div id="category">
+                                <div class="sec-heading">
+                                    CATEGORY
+                                </div>
+                                <div class="input">
+                                    <input list="categories" name="category" id="browser" placeholder="Choose a Category" required>
+                                            <datalist id="categories">
+                                                <option value="Personal">
+                                                <option value="School">
+                                                <option value="Work">
+                                                <option value="Cleaning">
+                                                <option value="Other">
+                                            </datalist>
+                                </div>
+                            </div>
+                            <div id="date">
+                                <div class="sec-heading">
+                                    DUE DATE
+                                </div>
+                                <div class="input">
+                                    <input type="date" name="date" id="input-date" required>
+                                </div>
+                            </div>
+                        </div>
+                    
+                        <div id="add-delete-buttons">
+                            <div id="add-button">
+                                <button type="submit"><i class="fas fa-plus"></i>ADD TASK</button>
+                            </div>
+                            <div id="delete-button">
+                                <button id="delete"><i class="far fa-trash-alt"></i>DELETE TASKS</button>
+                            </div>
+                        </div>
+
+                
+
+                    <div id="all-tasks">
+                        <%for(let i=todo_list.length-1;i>=0;i--){%>
+                            <div class="single-task">
+              
+                                <div class="show-todo">
+                                    
+                                    <div class="checkbox"><input type="checkbox" onclick="colorText()" value= <%=todo_list[i]._id%> ></div>
+                                    <div class="fetched-todo"><%=todo_list[i].todo%></div>
+                                    <div class="fetched-category"><%=todo_list[i].category%></div>
+                                </div>
+                                <div class="show-date">
+                                    <i class="fas fa-calendar-alt"></i>
+                                    <%=todo_list[i].date%>
+                                </div>
+                            </div>
+                        <%}%>
+                        
+                    </div>
+                </form>
+            </div>
+            <div id="snackbar">Your Todo is Updated....</div>
+            <script src="/js/home_script.js" type="text/javascript"></script>
         </body>
 
 </html>
