--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,7 @@
         <title>
             To Do App
         </title>
+        <link rel="icon" href="/images/todoImage.ico">
         <link href="/css/home.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
